Improve card alignment (not fixed)

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -844,7 +844,9 @@ The following bg classes use a manual parallax effect. This is as the default cl
     flex-wrap: wrap;
     column-gap: 2vw;
     row-gap: 2vh;
+    width: 100vw;
     padding: 0 1vw 5vh 3vw;
+    box-sizing: border-box;
     /* Maybe figure a way out to not make the last element align to middle if it's the only element in the row? */
     justify-content: space-evenly;
 }
